@startuml SlaughterhouseDomainModel
!include astah-min.puml
scale 0.3

class Animal {
    animalId
    arrivalAt
    liveWeight
    origin
}

class PlaceOfOrigin
{
    id
    name
}

class Part {
    partId
    weight
    type
}

class Tray {
    trayId
    maxWeightCapacity
    partType
}

class Product {
    id
    productName
}

class Package {
    partType
    amount
}

class HalfAnimal {

}

Tray "0..1" -- "*" Part : consists of ▶
Product "*" -- "1..*" Tray : comes from ▶
Part "*" -- "1" Animal : comes from ▶
Package --|> Product
HalfAnimal --|> Product

@enduml